--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,13 @@
-proprietary=-2
-undirected\ graph=-2
-DGOM=-2
-ORM=-1
-custody=-1
+proprietary=-1
+managed\ services=-1
+IMDG=-1
+personal\ data\ retention=-1
+PVC\ (containerisation)=-1
 cluster=1
 tamper=1
-PR=1
-metadata=1
 CDD=1
+metadata=1
+PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -23,12 +23,12 @@ Hungarian\ pollution=1
 pod=1
 .war\ file=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
 aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 Wireshark=1
-error\ budget=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 gateway\ team=1
 DC=1
@@ -100,14 +100,21 @@ ubiquitous=1
 performance\ testing=1
 semantic\ registration\ message=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
 collision\ resistant=1
 REST=1
 API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
+em\ dash\ ("—")\ function=1
+en\ dash\ ("–")\ function=1
+allocate=1
+web=1
+pipeline=1
+Data\ governance=1
+undirected\ graph=2
 vague=2
 synchronous=2
 container\ image=2
@@ -173,6 +180,11 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
+artifactory=2
+good\ separation\ of\ concerns\ for\ DocManager=2
+commissioning=2
+ORM=3
+custody=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -208,6 +220,7 @@ infer=4
 pseudonym=4
 outdegree=4
 CTE\ (sandbox)=4
+POJO=4
 runtime=5
 greedy\ solution=8
 interface=8
