--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,9 @@
-proprietary=-1
-managed\ services=-1
 IMDG=-1
-personal\ data\ retention=-1
 PVC\ (containerisation)=-1
+proprietary=-1
+personal\ data\ retention=-1
+managed\ services=-1
+detrimental=-1
 cluster=1
 tamper=1
 CDD=1
@@ -60,14 +61,17 @@ Logread=1
 RESTful=1
 allocate\ a\ list=1
 value\ stream=1
+allocate=1
 postmortem=1
 data\ flow=1
 roll\ out=1
+web=1
 onboarding=1
 ECB=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 abstraction\ examples=1
 token=1
+pipeline=1
 framework=1
 assess=1
 firewall=1
@@ -96,9 +100,11 @@ retrieve=1
 JPA=1
 Spring\ boot=1
 cohesion=1
+GDPR=1
 ubiquitous=1
 performance\ testing=1
 semantic\ registration\ message=1
+Data\ governance=1
 VPN\ whitelisting=1
 asynchronous=1
 object\ mapping\ (database)=1
@@ -108,13 +114,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-em\ dash\ ("—")\ function=1
-en\ dash\ ("–")\ function=1
-allocate=1
-web=1
-pipeline=1
-Data\ governance=1
-undirected\ graph=2
+good\ cohesion\ for\ DocManager=1
 vague=2
 synchronous=2
 container\ image=2
@@ -126,6 +126,7 @@ RESTful\ layers=2
 domain=2
 customer\ data\ domain=2
 justified\ vs\ excusable=2
+good\ separation\ of\ concerns\ for\ DocManager=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
@@ -145,6 +146,7 @@ container=2
 encapsulation=2
 credential=2
 Kafka\ vs\ Kubernetes=2
+undirected\ graph=2
 code\ integration=2
 PV\ (containerisation)=2
 obfuscate\ data=2
@@ -152,11 +154,14 @@ integrity\ (of\ documents)=2
 web\ portal=2
 edge\ (graphs)=2
 stop\ word\ filtering=2
+hash=2
+artifactory=2
 microservice=2
 operational\ risk=2
 product\ backlog\ (agile)=2
 Rancher\ platform=2
 RESTful\ client-server=2
+commissioning=2
 verbose=2
 CI/CD=2
 JPA\ entity\ management=2
@@ -180,19 +185,16 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-artifactory=2
-good\ separation\ of\ concerns\ for\ DocManager=2
-commissioning=2
-ORM=3
-custody=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
 integrated\ test\ environment=3
 port=3
 XSS=3
+ORM=3
 compatibility\ testing=3
 servlet\ container=3
+custody=3
 PII=3
 paradigm=3
 stakeholder=4
@@ -215,12 +217,12 @@ abstract\ class=4
 thoroughness=4
 fetch=4
 servlet\ vs\ controller=4
+POJO=4
 Azure=4
 infer=4
 pseudonym=4
 outdegree=4
 CTE\ (sandbox)=4
-POJO=4
 runtime=5
 greedy\ solution=8
 interface=8
