--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,14 @@
-IMDG=-1
-PVC\ (containerisation)=-1
-proprietary=-1
-personal\ data\ retention=-1
-managed\ services=-1
 detrimental=-1
+integration\ testing=-1
+TDC=-1
+trie=-1
+DORA=-1
+PVC\ (containerisation)=1
 cluster=1
 tamper=1
-CDD=1
-metadata=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -24,13 +24,14 @@ Hungarian\ pollution=1
 pod=1
 .war\ file=1
 credential\ examples=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
 Wireshark=1
-bounded\ context=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
+good\ cohesion\ for\ DocManager=1
 gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
@@ -106,15 +107,15 @@ performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
+asynchronous=1
 collision\ resistant=1
 REST=1
 API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-good\ cohesion\ for\ DocManager=1
+JSON=1
 vague=2
 synchronous=2
 container\ image=2
@@ -185,6 +186,8 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
+interface\ in\ java=2
+personal\ data\ retention=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
