--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,14 @@
-detrimental=-1
-integration\ testing=-1
 TDC=-1
-trie=-1
-DORA=-1
-PVC\ (containerisation)=1
+em\ dash\ ("—")\ function=-1
+indegree=-1
+pointcut=-1
+Ivy\ integration\ to\ Gradle=-1
+Kibana=1
 cluster=1
 tamper=1
-PR=1
-metadata=1
 CDD=1
+metadata=1
+PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -24,12 +24,12 @@ Hungarian\ pollution=1
 pod=1
 .war\ file=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
 aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 Wireshark=1
-error\ budget=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -45,16 +45,19 @@ Kerberos=1
 DDoS\ attacks=1
 throughput=1
 bad\ cohesion\ (DDD)=1
+PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
 entity\ (database)=1
 component\ scanning=1
 regression\ testing=1
+JSON=1
 garbage\ collection=1
 heap\ space=1
 defensive\ programming=1
 JDBC=1
 subsetting\ data=1
+Kerberos\ keytab=1
 deque=1
 exploratory\ testing=1
 database\ transactions=1
@@ -107,15 +110,19 @@ performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
+detrimental=1
 collision\ resistant=1
 REST=1
 API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-JSON=1
+Java\ bean=1
+KPI=1
+commissioning\ example=1
+trie=2
 vague=2
 synchronous=2
 container\ image=2
@@ -180,14 +187,16 @@ signup\ metadata=2
 OpenShift\ vs\ Kubernetes?=2
 NOT\ IN\ (SQL)=2
 TDM=2
+cross\ architecture=2
+interface\ in\ java=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-interface\ in\ java=2
-personal\ data\ retention=3
+namespace\ (cluster)=2
+parity=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -196,6 +205,7 @@ port=3
 XSS=3
 ORM=3
 compatibility\ testing=3
+personal\ data\ retention=3
 servlet\ container=3
 custody=3
 PII=3
