master: updated AWS concept

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,14 @@
-TDC=-1
-em\ dash\ ("—")\ function=-1
 indegree=-1
-pointcut=-1
 Ivy\ integration\ to\ Gradle=-1
-Kibana=1
+pointcut=-1
+TDC=-1
+SwiftUI=-1
+AWS=-1
 cluster=1
 tamper=1
-CDD=1
-metadata=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -24,12 +24,13 @@ Hungarian\ pollution=1
 pod=1
 .war\ file=1
 credential\ examples=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
 Wireshark=1
-bounded\ context=1
+commissioning\ example=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -57,8 +58,8 @@ heap\ space=1
 defensive\ programming=1
 JDBC=1
 subsetting\ data=1
-Kerberos\ keytab=1
 deque=1
+Kerberos\ keytab=1
 exploratory\ testing=1
 database\ transactions=1
 Logread=1
@@ -68,6 +69,7 @@ value\ stream=1
 allocate=1
 postmortem=1
 data\ flow=1
+Kibana=1
 roll\ out=1
 web=1
 onboarding=1
@@ -82,10 +84,12 @@ firewall=1
 DevSecOps=1
 Helm=1
 facility=1
+Java\ bean=1
 Unix=1
 Java\ EE=1
 subnet=1
 DBA=1
+KPI=1
 DRT=1
 unit\ testing=1
 NFC=1
@@ -110,8 +114,8 @@ performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
+asynchronous=1
 detrimental=1
 collision\ resistant=1
 REST=1
@@ -119,10 +123,8 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-Java\ bean=1
-KPI=1
-commissioning\ example=1
-trie=2
+URL\ safe\ format=1
+chaos\ engineering=1
 vague=2
 synchronous=2
 container\ image=2
@@ -130,6 +132,7 @@ usability\ testing=2
 functional\ testing=2
 sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
+trie=2
 RESTful\ layers=2
 domain=2
 customer\ data\ domain=2
@@ -188,6 +191,7 @@ OpenShift\ vs\ Kubernetes?=2
 NOT\ IN\ (SQL)=2
 TDM=2
 cross\ architecture=2
+namespace\ (cluster)=2
 interface\ in\ java=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
@@ -195,14 +199,14 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-namespace\ (cluster)=2
-parity=3
+state\ (of\ object)=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
 integrated\ test\ environment=3
 port=3
 XSS=3
+parity=3
 ORM=3
 compatibility\ testing=3
 personal\ data\ retention=3
@@ -236,6 +240,7 @@ infer=4
 pseudonym=4
 outdegree=4
 CTE\ (sandbox)=4
+legal\ person=4
 runtime=5
 greedy\ solution=8
 interface=8
