--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,9 +1,8 @@
-indegree=-1
-Ivy\ integration\ to\ Gradle=-1
-pointcut=-1
-TDC=-1
 SwiftUI=-1
-AWS=-1
+JPQL=-1
+Loki=-1
+real-time\ data\ flow=-1
+Hazelcast=-1
 cluster=1
 tamper=1
 PR=1
@@ -22,6 +21,7 @@ AD=1
 Argo\ CD=1
 Hungarian\ pollution=1
 pod=1
+URL\ safe\ format=1
 .war\ file=1
 credential\ examples=1
 RESTful\ data\ formats=1
@@ -82,6 +82,7 @@ framework=1
 assess=1
 firewall=1
 DevSecOps=1
+chaos\ engineering=1
 Helm=1
 facility=1
 Java\ bean=1
@@ -123,8 +124,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-URL\ safe\ format=1
-chaos\ engineering=1
+ubiquitous\ language\ (DDD)=1
 vague=2
 synchronous=2
 container\ image=2
@@ -181,6 +181,7 @@ canary\ deployment=2
 hashing=2
 to\ stash=2
 irreversible\ data\ transformation=2
+state\ (of\ object)=2
 memoization=2
 collision=2
 backlog=2
@@ -199,7 +200,8 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-state\ (of\ object)=2
+indegree=3
+Ivy\ integration\ to\ Gradle=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -237,10 +239,11 @@ servlet\ vs\ controller=4
 POJO=4
 Azure=4
 infer=4
+legal\ person=4
 pseudonym=4
 outdegree=4
 CTE\ (sandbox)=4
-legal\ person=4
+Kubernetes=4
 runtime=5
 greedy\ solution=8
 interface=8
