master: updated concepts

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,8 @@
-SwiftUI=-1
-JPQL=-1
-Loki=-1
 real-time\ data\ flow=-1
+FDP=-1
+JPQL=-1
 Hazelcast=-1
+ECB\ stress\ test=-1
 cluster=1
 tamper=1
 PR=1
@@ -29,6 +29,7 @@ container\ management\ platform=1
 aspect=1
 Wireshark=1
 commissioning\ example=1
+SwiftUI=1
 error\ budget=1
 bounded\ context=1
 cloud\ platform=1
@@ -55,8 +56,8 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-defensive\ programming=1
 JDBC=1
+defensive\ programming=1
 subsetting\ data=1
 deque=1
 Kerberos\ keytab=1
@@ -70,6 +71,7 @@ allocate=1
 postmortem=1
 data\ flow=1
 Kibana=1
+ubiquitous\ language\ (DDD)=1
 roll\ out=1
 web=1
 onboarding=1
@@ -124,7 +126,6 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-ubiquitous\ language\ (DDD)=1
 vague=2
 synchronous=2
 container\ image=2
@@ -200,16 +201,16 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
-indegree=3
-Ivy\ integration\ to\ Gradle=3
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
+indegree=3
 integrated\ test\ environment=3
 port=3
 XSS=3
 parity=3
 ORM=3
+Ivy\ integration\ to\ Gradle=3
 compatibility\ testing=3
 personal\ data\ retention=3
 servlet\ container=3
