--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,8 @@
-real-time\ data\ flow=-1
-FDP=-1
-JPQL=-1
-Hazelcast=-1
-ECB\ stress\ test=-1
+assemble=-1
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=-1
+etcd=-1
+Ingress\ Controller=-1
+TDC=-1
 cluster=1
 tamper=1
 PR=1
@@ -23,6 +23,7 @@ Hungarian\ pollution=1
 pod=1
 URL\ safe\ format=1
 .war\ file=1
+diamond\ operator\ (Java)=1
 credential\ examples=1
 RESTful\ data\ formats=1
 container\ management\ platform=1
@@ -45,13 +46,16 @@ YAML=1
 MLM=1
 Kerberos=1
 DDoS\ attacks=1
+stub=1
 throughput=1
 bad\ cohesion\ (DDD)=1
 PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
 entity\ (database)=1
+firewall\ opening=1
 component\ scanning=1
+pagination=1
 regression\ testing=1
 JSON=1
 garbage\ collection=1
@@ -67,6 +71,7 @@ Logread=1
 RESTful=1
 allocate\ a\ list=1
 value\ stream=1
+Kerberos\ keytab\ key=1
 allocate=1
 postmortem=1
 data\ flow=1
@@ -109,10 +114,12 @@ namespace\ (networking)=1
 continuous\ integration\ components=1
 retrieve=1
 JPA=1
-Spring\ boot=1
 cohesion=1
+Spring\ boot=1
 GDPR=1
+DGOM=1
 ubiquitous=1
+JPQL=1
 performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
@@ -120,8 +127,11 @@ VPN\ whitelisting=1
 object\ mapping\ (database)=1
 asynchronous=1
 detrimental=1
+heap=1
 collision\ resistant=1
+SSO=1
 REST=1
+due=1
 API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
@@ -131,6 +141,7 @@ synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
+directed\ graph=2
 sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
@@ -139,11 +150,13 @@ domain=2
 customer\ data\ domain=2
 justified\ vs\ excusable=2
 good\ separation\ of\ concerns\ for\ DocManager=2
+integration\ testing=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
 F5=2
+enhanced=2
 VIP\ (OpenShift)=2
 feature\ flag=2
 coupling\ (noun)\ (software)=2
@@ -156,8 +169,10 @@ good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
 container=2
 encapsulation=2
+overlay\ (web)=2
 credential=2
 Kafka\ vs\ Kubernetes=2
+data\ pseudonymization=2
 undirected\ graph=2
 code\ integration=2
 PV\ (containerisation)=2
@@ -169,15 +184,18 @@ stop\ word\ filtering=2
 hash=2
 artifactory=2
 microservice=2
+Kafka=2
 operational\ risk=2
 product\ backlog\ (agile)=2
 Rancher\ platform=2
+domain\ vs\ bounded\ context=2
 RESTful\ client-server=2
 commissioning=2
 verbose=2
 CI/CD=2
 JPA\ entity\ management=2
 tampering=2
+Loki\ (observability)=2
 canary\ deployment=2
 hashing=2
 to\ stash=2
@@ -194,6 +212,7 @@ NOT\ IN\ (SQL)=2
 TDM=2
 cross\ architecture=2
 namespace\ (cluster)=2
+permutation=2
 interface\ in\ java=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
@@ -201,6 +220,7 @@ test\ data\ management\ for\ enterprise=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
+modal\ window=2
 due\ diligence=3
 dispose\ of\ memory=3
 DPIA=3
@@ -217,6 +237,7 @@ servlet\ container=3
 custody=3
 PII=3
 paradigm=3
+ECB\ stress\ test=3
 stakeholder=4
 Docker=4
 JSP=4
@@ -235,6 +256,7 @@ present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
 thoroughness=4
+poor\ separation\ of\ concerns\ for\ DocManager=4
 fetch=4
 servlet\ vs\ controller=4
 POJO=4
@@ -244,6 +266,7 @@ legal\ person=4
 pseudonym=4
 outdegree=4
 CTE\ (sandbox)=4
+Chromium=4
 Kubernetes=4
 runtime=5
 greedy\ solution=8
