--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -3,11 +3,12 @@ GitHub\ repository\ access\ HTTPS\ vs\ SSH=-1
 etcd=-1
 Ingress\ Controller=-1
 TDC=-1
-cluster=1
+PCI\ DSS=-1
 tamper=1
-PR=1
-metadata=1
+cluster=1
 CDD=1
+metadata=1
+PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -25,14 +26,14 @@ URL\ safe\ format=1
 .war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
 aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 Wireshark=1
-commissioning\ example=1
 SwiftUI=1
-error\ budget=1
+commissioning\ example=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -60,11 +61,11 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-JDBC=1
 defensive\ programming=1
+JDBC=1
 subsetting\ data=1
-deque=1
 Kerberos\ keytab=1
+deque=1
 exploratory\ testing=1
 database\ transactions=1
 Logread=1
@@ -124,8 +125,8 @@ performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
 detrimental=1
 heap=1
 collision\ resistant=1
@@ -136,6 +137,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
+Swagger=1
 vague=2
 synchronous=2
 container\ image=2
