master: not_today.csv now uses commas instead of semicolons; implemented checks for commas, so they do not mess up reading csv

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,6 @@
 problems:
+  - csv should use comma
+  - concept should not use comma
   - ICT system (components):
     - user answer:
       - "Information Computing Technology system componens - hardware, software, newtorks and people":
