--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,14 @@
-assemble=-1
-GitHub\ repository\ access\ HTTPS\ vs\ SSH=-1
-etcd=-1
-Ingress\ Controller=-1
-TDC=-1
+etcd=-2
+Ingress\ Controller=-2
+full-text\ search=-1
 PCI\ DSS=-1
-tamper=1
+Bean\ factory/\ Application\ context=-1
+Elasticsearch=-1
 cluster=1
-CDD=1
-metadata=1
+tamper=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -26,14 +26,15 @@ URL\ safe\ format=1
 .war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
+Swagger=1
 Wireshark=1
-SwiftUI=1
 commissioning\ example=1
-bounded\ context=1
+SwiftUI=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -61,11 +62,13 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-defensive\ programming=1
 JDBC=1
+defensive\ programming=1
 subsetting\ data=1
-Kerberos\ keytab=1
+e.g.=1
+gateway=1
 deque=1
+Kerberos\ keytab=1
 exploratory\ testing=1
 database\ transactions=1
 Logread=1
@@ -82,6 +85,7 @@ roll\ out=1
 web=1
 onboarding=1
 ECB=1
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 abstraction\ examples=1
 token=1
@@ -125,8 +129,8 @@ performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
+asynchronous=1
 detrimental=1
 heap=1
 collision\ resistant=1
@@ -137,7 +141,6 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-Swagger=1
 vague=2
 synchronous=2
 container\ image=2
@@ -157,9 +160,11 @@ worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
+container\ instance=2
 F5=2
 enhanced=2
 VIP\ (OpenShift)=2
+lazy\ initialization=2
 feature\ flag=2
 coupling\ (noun)\ (software)=2
 Ivy=2
@@ -202,6 +207,7 @@ canary\ deployment=2
 hashing=2
 to\ stash=2
 irreversible\ data\ transformation=2
+credibility=2
 state\ (of\ object)=2
 memoization=2
 collision=2
@@ -216,6 +222,7 @@ cross\ architecture=2
 namespace\ (cluster)=2
 permutation=2
 interface\ in\ java=2
+using\ APIs=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
@@ -239,6 +246,7 @@ servlet\ container=3
 custody=3
 PII=3
 paradigm=3
+TDC=3
 ECB\ stress\ test=3
 stakeholder=4
 Docker=4
