--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,13 @@
-etcd=-2
-Ingress\ Controller=-2
-full-text\ search=-1
-PCI\ DSS=-1
-Bean\ factory/\ Application\ context=-1
-Elasticsearch=-1
-cluster=1
+JSX=-1
+HSM=-1
+etcd=-1
+DSL=-1
+provisioning=-1
 tamper=1
-PR=1
-metadata=1
+cluster=1
 CDD=1
+metadata=1
+PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -26,15 +25,15 @@ URL\ safe\ format=1
 .war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
-aspect=1
 Swagger=1
+aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 Wireshark=1
-commissioning\ example=1
 SwiftUI=1
-error\ budget=1
+commissioning\ example=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -54,6 +53,7 @@ bad\ cohesion\ (DDD)=1
 PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
+Google\ Cloud=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -62,13 +62,13 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-JDBC=1
 defensive\ programming=1
+JDBC=1
 subsetting\ data=1
 e.g.=1
 gateway=1
-deque=1
 Kerberos\ keytab=1
+deque=1
 exploratory\ testing=1
 database\ transactions=1
 Logread=1
@@ -82,6 +82,7 @@ data\ flow=1
 Kibana=1
 ubiquitous\ language\ (DDD)=1
 roll\ out=1
+exponent\ (math)=1
 web=1
 onboarding=1
 ECB=1
@@ -108,6 +109,7 @@ unit\ testing=1
 NFC=1
 DRY=1
 etcd\ etymology=1
+cloud=1
 security\ testing=1
 NFS=1
 YubiKey=1
@@ -128,15 +130,17 @@ JPQL=1
 performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
+Elasticsearch=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
 detrimental=1
 heap=1
 collision\ resistant=1
 SSO=1
 REST=1
 due=1
+CTE\ (SQL)=1
 API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
@@ -171,11 +175,13 @@ Ivy=2
 VPN=2
 OpenShift=2
 jar\ hell=2
+volatile=2
 hub=2
 good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
 container=2
 encapsulation=2
+UI\ dialog=2
 overlay\ (web)=2
 credential=2
 Kafka\ vs\ Kubernetes=2
@@ -197,6 +203,7 @@ product\ backlog\ (agile)=2
 Rancher\ platform=2
 domain\ vs\ bounded\ context=2
 RESTful\ client-server=2
+semantic\ message=2
 commissioning=2
 verbose=2
 CI/CD=2
@@ -271,9 +278,11 @@ fetch=4
 servlet\ vs\ controller=4
 POJO=4
 Azure=4
+DSS=4
 infer=4
 legal\ person=4
 pseudonym=4
+substitution\ (general\ word)=4
 outdegree=4
 CTE\ (sandbox)=4
 Chromium=4
