--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,10 @@
-JSX=-1
-HSM=-1
-etcd=-1
-DSL=-1
-provisioning=-1
+HSM=-2
+JSX=-2
+Kerberos\ ticket=-1
+GCT=-1
+Hibernate=-1
+staging\ environment=-1
+DSL=1
 tamper=1
 cluster=1
 CDD=1
@@ -145,6 +147,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
+volatile\ (Java)=1
 vague=2
 synchronous=2
 container\ image=2
@@ -272,6 +275,7 @@ git\ stash=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
+non-semantic\ message=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 fetch=4
@@ -287,6 +291,8 @@ outdegree=4
 CTE\ (sandbox)=4
 Chromium=4
 Kubernetes=4
+SLO=4
+comply=4
 runtime=5
 greedy\ solution=8
 interface=8
