master: changes in concepts

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,15 +1,13 @@
-HSM=-2
 JSX=-2
+staging\ environment=-1
 Kerberos\ ticket=-1
 GCT=-1
 Hibernate=-1
-staging\ environment=-1
-DSL=1
-tamper=1
 cluster=1
-CDD=1
-metadata=1
+tamper=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -27,15 +25,15 @@ URL\ safe\ format=1
 .war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-Swagger=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
+Swagger=1
 Wireshark=1
-SwiftUI=1
 commissioning\ example=1
-bounded\ context=1
+SwiftUI=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -64,13 +62,13 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-defensive\ programming=1
 JDBC=1
+defensive\ programming=1
 subsetting\ data=1
 e.g.=1
 gateway=1
-Kerberos\ keytab=1
 deque=1
+Kerberos\ keytab=1
 exploratory\ testing=1
 database\ transactions=1
 Logread=1
@@ -115,8 +113,10 @@ cloud=1
 security\ testing=1
 NFS=1
 YubiKey=1
+DSL=1
 observability=1
 streamline=1
+volatile\ (Java)=1
 traverse=1
 DevOps=1
 namespace\ (networking)=1
@@ -134,8 +134,8 @@ semantic\ registration\ message=1
 Data\ governance=1
 Elasticsearch=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
+asynchronous=1
 detrimental=1
 heap=1
 collision\ resistant=1
@@ -147,7 +147,6 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-volatile\ (Java)=1
 vague=2
 synchronous=2
 container\ image=2
@@ -174,6 +173,7 @@ VIP\ (OpenShift)=2
 lazy\ initialization=2
 feature\ flag=2
 coupling\ (noun)\ (software)=2
+enterprise-level=2
 Ivy=2
 VPN=2
 OpenShift=2
@@ -207,6 +207,7 @@ Rancher\ platform=2
 domain\ vs\ bounded\ context=2
 RESTful\ client-server=2
 semantic\ message=2
+A/B\ testing=2
 commissioning=2
 verbose=2
 CI/CD=2
@@ -220,6 +221,7 @@ irreversible\ data\ transformation=2
 credibility=2
 state\ (of\ object)=2
 memoization=2
+artifact\ (context\:\ compilation)=2
 collision=2
 backlog=2
 dispose=2
@@ -276,6 +278,7 @@ present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
 non-semantic\ message=4
+SLO=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 fetch=4
@@ -289,10 +292,9 @@ pseudonym=4
 substitution\ (general\ word)=4
 outdegree=4
 CTE\ (sandbox)=4
+comply=4
 Chromium=4
 Kubernetes=4
-SLO=4
-comply=4
 runtime=5
 greedy\ solution=8
 interface=8
