--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,8 +1,9 @@
-JSX=-2
-staging\ environment=-1
-Kerberos\ ticket=-1
-GCT=-1
-Hibernate=-1
+servlet=-1
+JSX=-1
+hyphen\ ("-")\ function=-1
+ELK=-1
+intrusive=-1
+signup\ raw\ data=-1
 cluster=1
 tamper=1
 PR=1
@@ -30,6 +31,7 @@ container\ management\ platform=1
 aspect=1
 Swagger=1
 Wireshark=1
+staging\ environment=1
 commissioning\ example=1
 SwiftUI=1
 error\ budget=1
@@ -70,10 +72,12 @@ gateway=1
 deque=1
 Kerberos\ keytab=1
 exploratory\ testing=1
+dispatcher=1
 database\ transactions=1
 Logread=1
 RESTful=1
 allocate\ a\ list=1
+build\ process=1
 value\ stream=1
 Kerberos\ keytab\ key=1
 allocate=1
@@ -222,6 +226,7 @@ credibility=2
 state\ (of\ object)=2
 memoization=2
 artifact\ (context\:\ compilation)=2
+Jenkins=2
 collision=2
 backlog=2
 dispose=2
@@ -264,10 +269,12 @@ stakeholder=4
 Docker=4
 JSP=4
 master\ node=4
+endpoint=4
 PPTE=4
 penetration\ testing=4
 WoW=4
 suite=4
+boilerplate=4
 technical\ debt=4
 bounded=4
 dispose\ of\ a\ list=4
