--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,14 +1,16 @@
 servlet=-2
-signup\ raw\ data=-2
-intrusive=-2
 ELK=-2
+intrusive=-2
+signup\ raw\ data=-2
 web\ server=-1
-hyphen\ ("-")\ function=1
-tamper=1
+Helm\ chart=-1
+AWS\ (cloud)=-1
+JWT=1
 cluster=1
-CDD=1
-metadata=1
+tamper=1
 PR=1
+metadata=1
+CDD=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -20,22 +22,23 @@ pivot=1
 test\ pilot=1
 AD=1
 Argo\ CD=1
+hyphen\ ("-")\ function=1
 Hungarian\ pollution=1
 pod=1
 URL\ safe\ format=1
 .war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-Swagger=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
+Swagger=1
 Wireshark=1
 staging\ environment=1
-SwiftUI=1
 commissioning\ example=1
-bounded\ context=1
+SwiftUI=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
@@ -64,13 +67,14 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-defensive\ programming=1
 JDBC=1
+defensive\ programming=1
 subsetting\ data=1
 e.g.=1
 gateway=1
-Kerberos\ keytab=1
 deque=1
+Kerberos\ keytab=1
+SLI=1
 exploratory\ testing=1
 dispatcher=1
 database\ transactions=1
@@ -138,8 +142,8 @@ semantic\ registration\ message=1
 Data\ governance=1
 Elasticsearch=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
+asynchronous=1
 detrimental=1
 heap=1
 collision\ resistant=1
@@ -151,7 +155,9 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-SLI=1
+Ingress\ Controller=1
+em\ dash\ ("—")\ function=1
+IMDG=1
 vague=2
 synchronous=2
 container\ image=2
@@ -289,6 +295,7 @@ non-semantic\ message=4
 SLO=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
+PCI\ DSS=4
 fetch=4
 servlet\ vs\ controller=4
 POJO=4
@@ -303,7 +310,7 @@ CTE\ (sandbox)=4
 comply=4
 Chromium=4
 Kubernetes=4
-PCI\ DSS=4
+FDP=4
 runtime=5
 greedy\ solution=8
 interface=8
