--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,18 +1,20 @@
-servlet=-2
-ELK=-2
+servlet=-4
 intrusive=-2
-signup\ raw\ data=-2
-web\ server=-1
-Helm\ chart=-1
-AWS\ (cloud)=-1
-JWT=1
+URL=-2
+ELK=-1
+web\ container=-1
+factory\ pattern=-1
+TLS=-1
+DNS=-1
+UAT=-1
+Hazelcast=-1
 cluster=1
 tamper=1
 PR=1
 metadata=1
 CDD=1
-base\ (math)=1
 aspect\ oriented\ programming=1
+base\ (math)=1
 Rancher\ features=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
@@ -27,12 +29,14 @@ Hungarian\ pollution=1
 pod=1
 URL\ safe\ format=1
 .war\ file=1
+full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
 RESTful\ data\ formats=1
 container\ management\ platform=1
 aspect=1
 Swagger=1
+separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
 commissioning\ example=1
@@ -40,14 +44,16 @@ SwiftUI=1
 error\ budget=1
 bounded\ context=1
 cloud\ platform=1
+Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
+IMDG=1
 ICT\ system\ (components)=1
-bounded\ context\ (example\ of\ order\ processing)=1
 JETTY=1
+bounded\ context\ (example\ of\ order\ processing)=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -55,8 +61,10 @@ DDoS\ attacks=1
 stub=1
 throughput=1
 bad\ cohesion\ (DDD)=1
+JWT=1
 PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
+package\ (software)=1
 to\ prompt=1
 Google\ Cloud=1
 entity\ (database)=1
@@ -67,11 +75,12 @@ regression\ testing=1
 JSON=1
 garbage\ collection=1
 heap\ space=1
-JDBC=1
 defensive\ programming=1
+JDBC=1
 subsetting\ data=1
 e.g.=1
 gateway=1
+Saba=1
 deque=1
 Kerberos\ keytab=1
 SLI=1
@@ -81,12 +90,14 @@ database\ transactions=1
 Logread=1
 RESTful=1
 allocate\ a\ list=1
+Logstash=1
 build\ process=1
 value\ stream=1
 Kerberos\ keytab\ key=1
 allocate=1
 postmortem=1
 data\ flow=1
+secret\ (Kubernetes)=1
 Kibana=1
 ubiquitous\ language\ (DDD)=1
 roll\ out=1
@@ -107,6 +118,7 @@ chaos\ engineering=1
 Helm=1
 facility=1
 Java\ bean=1
+etcd=1
 Unix=1
 Java\ EE=1
 subnet=1
@@ -116,6 +128,7 @@ DRT=1
 unit\ testing=1
 NFC=1
 DRY=1
+test\ integration=1
 etcd\ etymology=1
 cloud=1
 security\ testing=1
@@ -125,7 +138,10 @@ DSL=1
 observability=1
 streamline=1
 volatile\ (Java)=1
+Ingress\ Controller=1
+web\ server=1
 traverse=1
+container\ runtime=1
 DevOps=1
 namespace\ (networking)=1
 continuous\ integration\ components=1
@@ -142,12 +158,13 @@ semantic\ registration\ message=1
 Data\ governance=1
 Elasticsearch=1
 VPN\ whitelisting=1
-object\ mapping\ (database)=1
 asynchronous=1
+object\ mapping\ (database)=1
 detrimental=1
 heap=1
 collision\ resistant=1
 SSO=1
+means\ of\ defensive\ programming=1
 REST=1
 due=1
 CTE\ (SQL)=1
@@ -155,9 +172,6 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-Ingress\ Controller=1
-em\ dash\ ("—")\ function=1
-IMDG=1
 vague=2
 synchronous=2
 container\ image=2
@@ -167,10 +181,13 @@ directed\ graph=2
 sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
+JPA\ transaction=2
+JSX=2
 RESTful\ layers=2
 domain=2
 customer\ data\ domain=2
 justified\ vs\ excusable=2
+assemble=2
 good\ separation\ of\ concerns\ for\ DocManager=2
 integration\ testing=2
 worker\ node=2
@@ -178,6 +195,8 @@ bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
 container\ instance=2
+sticky\ session=2
+connection\ protection\ (examples)=2
 F5=2
 enhanced=2
 VIP\ (OpenShift)=2
@@ -185,6 +204,7 @@ lazy\ initialization=2
 feature\ flag=2
 coupling\ (noun)\ (software)=2
 enterprise-level=2
+operations\ specialist=2
 Ivy=2
 VPN=2
 OpenShift=2
@@ -221,6 +241,7 @@ semantic\ message=2
 A/B\ testing=2
 commissioning=2
 verbose=2
+API\ gateway=2
 CI/CD=2
 JPA\ entity\ management=2
 tampering=2
@@ -239,6 +260,7 @@ backlog=2
 dispose=2
 IoC=2
 signup\ metadata=2
+RESTful\ methods=2
 OpenShift\ vs\ Kubernetes?=2
 NOT\ IN\ (SQL)=2
 TDM=2
@@ -246,6 +268,7 @@ cross\ architecture=2
 namespace\ (cluster)=2
 permutation=2
 interface\ in\ java=2
+abstraction=2
 using\ APIs=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
@@ -255,6 +278,7 @@ OKR=2
 on-premises\ datacenter=2
 modal\ window=2
 due\ diligence=3
+AWS\ (cloud)=3
 dispose\ of\ memory=3
 DPIA=3
 indegree=3
@@ -264,6 +288,7 @@ XSS=3
 parity=3
 ORM=3
 Ivy\ integration\ to\ Gradle=3
+signup\ raw\ data=3
 compatibility\ testing=3
 personal\ data\ retention=3
 servlet\ container=3
@@ -280,6 +305,7 @@ endpoint=4
 PPTE=4
 penetration\ testing=4
 WoW=4
+mitigate=4
 suite=4
 boilerplate=4
 technical\ debt=4
@@ -295,6 +321,8 @@ non-semantic\ message=4
 SLO=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
+FDP=4
+RDBMS=4
 PCI\ DSS=4
 fetch=4
 servlet\ vs\ controller=4
@@ -310,7 +338,6 @@ CTE\ (sandbox)=4
 comply=4
 Chromium=4
 Kubernetes=4
-FDP=4
 runtime=5
 greedy\ solution=8
 interface=8
