--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -8,6 +8,7 @@ TLS=-1
 DNS=-1
 UAT=-1
 Hazelcast=-1
+managed\ services\ (IT)=-1
 cluster=1
 tamper=1
 PR=1
@@ -172,6 +173,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
+DC\ components=1
 vague=2
 synchronous=2
 container\ image=2
@@ -277,6 +279,9 @@ Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
 modal\ window=2
+provisioning=2
+real-time\ data\ flow=2
+cohesion\ example=2
 due\ diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
@@ -338,6 +343,8 @@ CTE\ (sandbox)=4
 comply=4
 Chromium=4
 Kubernetes=4
+facilitate\ meeting=4
+DAO=4
 runtime=5
 greedy\ solution=8
 interface=8
