--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,16 +1,14 @@
-servlet=-5
-URL=-3
-web\ container=-2
-UAT=-2
-TLS=-2
-managed\ services\ (IT)=-1
-DNS=1
-factory\ pattern=1
+servlet=-3
+TLS=-3
+UAT=-3
+managed\ services\ (IT)=-2
+GPA=-1
+product\ life\ cycle\ management=-1
 cluster=1
 tamper=1
-PR=1
-metadata=1
 CDD=1
+metadata=1
+PR=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 Rancher\ features=1
@@ -30,17 +28,17 @@ URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
-aspect=1
 Swagger=1
+aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
-commissioning\ example=1
 SwiftUI=1
-error\ budget=1
+commissioning\ example=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
@@ -48,10 +46,10 @@ gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-IMDG=1
 ICT\ system\ (components)=1
-JETTY=1
+IMDG=1
 bounded\ context\ (example\ of\ order\ processing)=1
+JETTY=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -65,6 +63,7 @@ good\ cohesion\ (DDD)=1
 package\ (software)=1
 to\ prompt=1
 Google\ Cloud=1
+factory\ pattern=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -78,9 +77,10 @@ JDBC=1
 subsetting\ data=1
 e.g.=1
 gateway=1
+DNS=1
 Saba=1
-deque=1
 Kerberos\ keytab=1
+deque=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
@@ -100,6 +100,7 @@ Kibana=1
 ubiquitous\ language\ (DDD)=1
 roll\ out=1
 exponent\ (math)=1
+URL=1
 web=1
 onboarding=1
 DC\ components=1
@@ -171,8 +172,8 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-intrusive=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 synchronous=2
 container\ image=2
 usability\ testing=2
@@ -196,7 +197,9 @@ bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
 container\ instance=2
+web\ container=2
 sticky\ session=2
+intrusive=2
 connection\ protection\ (examples)=2
 F5=2
 enhanced=2
@@ -280,11 +283,11 @@ Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
 modal\ window=2
-ELK=3
 due\ diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
 DPIA=3
+ELK=3
 indegree=3
 integrated\ test\ environment=3
 port=3
