--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,13 +1,14 @@
 TLS=-5
 UAT=-2
 product\ life\ cycle\ management=-2
-DORA=-1
 CI\ (IT\ component)=-1
+DORA=-1
+remediation=-1
 cluster=1
 tamper=1
-CDD=1
-metadata=1
 PR=1
+metadata=1
+CDD=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 Rancher\ features=1
@@ -28,17 +29,17 @@ URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-Swagger=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
+Swagger=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
-SwiftUI=1
 commissioning\ example=1
-bounded\ context=1
+SwiftUI=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
@@ -46,10 +47,10 @@ gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-ICT\ system\ (components)=1
 IMDG=1
-bounded\ context\ (example\ of\ order\ processing)=1
+ICT\ system\ (components)=1
 JETTY=1
+bounded\ context\ (example\ of\ order\ processing)=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -62,8 +63,8 @@ PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 package\ (software)=1
 to\ prompt=1
-Google\ Cloud=1
 factory\ pattern=1
+Google\ Cloud=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -79,8 +80,8 @@ e.g.=1
 gateway=1
 DNS=1
 Saba=1
-Kerberos\ keytab=1
 deque=1
+Kerberos\ keytab=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
@@ -347,6 +348,7 @@ CTE\ (sandbox)=4
 comply=4
 Chromium=4
 Kubernetes=4
+PI\ planning=4
 runtime=5
 greedy\ solution=8
 interface=8
