--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,18 +1,19 @@
-TLS=-5
-UAT=-2
-product\ life\ cycle\ management=-2
-CI\ (IT\ component)=-1
-DORA=-1
 remediation=-1
+RBAC=-1
+Kerberos\ principal=-1
+AFC=-1
+TLS=-1
+GCT=-1
 cluster=1
 tamper=1
-PR=1
-metadata=1
 CDD=1
+metadata=1
+PR=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 Rancher\ features=1
 servlet=1
+CI\ (IT\ component)=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 F5\ rules=1
@@ -22,6 +23,7 @@ test\ pilot=1
 AD=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
+ICT\ system=1
 Hungarian\ pollution=1
 pod=1
 URL\ safe\ format=1
@@ -29,17 +31,17 @@ URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
-aspect=1
 Swagger=1
+aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
-commissioning\ example=1
 SwiftUI=1
-error\ budget=1
+commissioning\ example=1
 bounded\ context=1
+error\ budget=1
 cloud\ platform=1
 Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
@@ -47,10 +49,10 @@ gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-IMDG=1
 ICT\ system\ (components)=1
-JETTY=1
+IMDG=1
 bounded\ context\ (example\ of\ order\ processing)=1
+JETTY=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -63,8 +65,8 @@ PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 package\ (software)=1
 to\ prompt=1
-factory\ pattern=1
 Google\ Cloud=1
+factory\ pattern=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -80,8 +82,8 @@ e.g.=1
 gateway=1
 DNS=1
 Saba=1
-deque=1
 Kerberos\ keytab=1
+deque=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
@@ -173,6 +175,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
+proprietary=1
 vague=2
 connection\ pool\ (context\:\ database)=2
 synchronous=2
@@ -187,6 +190,7 @@ JPA\ transaction=2
 JSX=2
 RESTful\ layers=2
 domain=2
+deterministic=2
 customer\ data\ domain=2
 justified\ vs\ excusable=2
 real-time\ data\ flow=2
@@ -198,6 +202,7 @@ bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
 container\ instance=2
+distributed\ computing=2
 web\ container=2
 sticky\ session=2
 intrusive=2
@@ -340,6 +345,7 @@ Azure=4
 DSS=4
 infer=4
 facilitate\ meeting=4
+PI\ planning=4
 legal\ person=4
 pseudonym=4
 substitution\ (general\ word)=4
@@ -348,7 +354,6 @@ CTE\ (sandbox)=4
 comply=4
 Chromium=4
 Kubernetes=4
-PI\ planning=4
 runtime=5
 greedy\ solution=8
 interface=8
