master: new concepts

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -6,9 +6,9 @@ TLS=-1
 GCT=-1
 cluster=1
 tamper=1
-CDD=1
-metadata=1
 PR=1
+metadata=1
+CDD=1
 aspect\ oriented\ programming=1
 base\ (math)=1
 Rancher\ features=1
@@ -31,17 +31,17 @@ URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-Swagger=1
-aspect=1
-container\ management\ platform=1
 RESTful\ data\ formats=1
+container\ management\ platform=1
+aspect=1
+Swagger=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
-SwiftUI=1
 commissioning\ example=1
-bounded\ context=1
+SwiftUI=1
 error\ budget=1
+bounded\ context=1
 cloud\ platform=1
 Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
@@ -49,10 +49,10 @@ gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-ICT\ system\ (components)=1
 IMDG=1
-bounded\ context\ (example\ of\ order\ processing)=1
+ICT\ system\ (components)=1
 JETTY=1
+bounded\ context\ (example\ of\ order\ processing)=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -65,8 +65,8 @@ PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 package\ (software)=1
 to\ prompt=1
-Google\ Cloud=1
 factory\ pattern=1
+Google\ Cloud=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -74,6 +74,7 @@ pagination=1
 regression\ testing=1
 JSON=1
 garbage\ collection=1
+proprietary=1
 heap\ space=1
 defensive\ programming=1
 JDBC=1
@@ -82,8 +83,8 @@ e.g.=1
 gateway=1
 DNS=1
 Saba=1
-Kerberos\ keytab=1
 deque=1
+Kerberos\ keytab=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
@@ -159,8 +160,8 @@ JPQL=1
 performance\ testing=1
 semantic\ registration\ message=1
 Data\ governance=1
-Elasticsearch=1
 VPN\ whitelisting=1
+Elasticsearch=1
 asynchronous=1
 object\ mapping\ (database)=1
 detrimental=1
@@ -175,7 +176,7 @@ API=1
 hash\ use\ cases=1
 JPA\ responsibilities=1
 CTO=1
-proprietary=1
+servlet/controller/MVC=1
 vague=2
 connection\ pool\ (context\:\ database)=2
 synchronous=2
